// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error display CheckBoxListInput 1`] = `
<DocumentFragment>
  <div
    class="sc-AxmLO lfRwSm"
  >
    <div
      class="sc-AxheI jMLNwX"
    >
      <ul
        class="sc-AxgMl kYQuzp"
      >
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option1
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option2
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option3
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option4
          </label>
        </li>
      </ul>
      <label
        class="sc-AxhCb cPnBNO"
      >
        <input
          class="sc-AxiKw fYVMUP"
          type="checkbox"
        />
        Выделить всё
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches snapshot  1`] = `
<DocumentFragment>
  <div
    class="sc-AxmLO lfRwSm"
  >
    <div
      class="sc-AxheI jMLNwX"
    >
      <ul
        class="sc-AxgMl kYQuzp"
      >
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option1
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option2
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option3
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option4
          </label>
        </li>
      </ul>
      <label
        class="sc-AxhCb cPnBNO"
      >
        <input
          class="sc-AxiKw fYVMUP"
          type="checkbox"
        />
        Выделить всё
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`isLoading display CheckBoxListInput 1`] = `
<DocumentFragment>
  <div
    class="sc-AxmLO lfRwSm"
  >
    <div
      class="sc-AxheI jMLNwX"
    >
      <ul
        class="sc-AxgMl kYQuzp"
      >
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option1
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option2
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option3
          </label>
        </li>
        <li
          class="sc-AxhUy jxqIDM"
        >
          <label
            class="sc-AxhCb cPnBNO"
          >
            <input
              class="sc-AxiKw fYVMUP"
              type="checkbox"
            />
            option4
          </label>
        </li>
      </ul>
      <label
        class="sc-AxhCb cPnBNO"
      >
        <input
          class="sc-AxiKw fYVMUP"
          type="checkbox"
        />
        Выделить всё
      </label>
    </div>
    <img
      class="sc-AxirZ cxtyjb"
      src="data:image/gif;base64,R0lGODlhEAAQALMMAKqooJGOhp2bk7e1rZ2bkre1rJCPhqqon8PBudDOxXd1bISCef///wAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEAAAAh+QQFAAAMACwAAAAAEAAQAAAET5DJyYyhmAZ7sxQEs1nMsmACGJKmSaVEOLXnK1PuBADepCiMg/DQ+/2GRI8RKOxJfpTCIJNIYArS6aRajWYZCASDa41Ow+Fx2YMWOyfpTAQAIfkEBQAADAAsAAAAABAAEAAABE6QyckEoZgKe7MEQMUxhoEd6FFdQWlOqTq15SlT9VQM3rQsjMKO5/n9hANixgjc9SQ/CgKRUSgw0ynFapVmGYkEg3v1gsPibg8tfk7CnggAIfkEBQAADAAsAAAAABAAEAAABE2QycnOoZjaA/IsRWV1goCBoMiUJTW8A0XMBPZmM4Ug3hQEjN2uZygahDyP0RBMEpmTRCKzWGCkUkq1SsFOFQrG1tr9gsPc3jnco4A9EQAh+QQFAAAMACwAAAAAEAAQAAAETpDJyUqhmFqbJ0LMIA7McWDfF5LmAVApOLUvLFMmlSTdJAiM3a73+wl5HYKSEET2lBSFIhMIYKRSimFriGIZiwWD2/WCw+Jt7xxeU9qZCAAh+QQFAAAMACwAAAAAEAAQAAAETZDJyRCimFqbZ0rVxgwF9n3hSJbeSQ2rCWIkpSjddBzMfee7nQ/XCfJ+OQYAQFksMgQBxumkEKLSCfVpMDCugqyW2w18xZmuwZycdDsRACH5BAUAAAwALAAAAAAQABAAAARNkMnJUqKYWpunUtXGIAj2feFIlt5JrWybkdSydNNQMLaND7pC79YBFnY+HENHMRgyhwPGaQhQotGm00oQMLBSLYPQ9QIASrLAq5x0OxEAIfkEBQAADAAsAAAAABAAEAAABE2QycmUopham+da1cYkCfZ94UiW3kmtbJuRlGF0E4Iwto3rut6tA9wFAjiJjkIgZAYDTLNJgUIpgqyAcTgwCuACJssAdL3gpLmbpLAzEQA7"
    />
  </div>
</DocumentFragment>
`;
